Fix CORS config

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Host=dpg-d1epf27fte5s73ff3n4g-a;Database=aleksgeotoursreviewsapi;Username=aleksgeotoursreviewsapi_user;Password=0MdKy68hX0lvDWSsgLlqHTi3IFNeSFfA"
     }
+
 }
